--- a/internal/views/home/index.templ
+++ b/internal/views/home/index.templ
@@ -9,8 +9,8 @@ import "github.com/muhhae/lorem-ipsum/internal/views/shared"
 templ Index() {
 	@template.Base("Lorem Ipsum") {
 		@shared.NavBar()
-		<div class="p-2 md:p-10 md:pt-3 flex-col flex items-center">
-			<div id="post-container" class="lg:w-2/5 w-full flex flex-col">
+		<div id="scrollArea" class="p-2 md:p-10 md:pt-3 flex-col flex items-center">
+			<div id="contentArea" class="lg:w-2/5 w-full flex flex-col">
 				@Form()
 				<div
 					id="loader"
