--- a/internal/views/home/index.templ
+++ b/internal/views/home/index.templ
@@ -16,7 +16,7 @@ templ Index() {
 					id="loader"
 					hx-trigger="intersect"
 					hx-swap="outerHTML"
-					hx-get="/api/v1/post/Default?iteration=0"
+					hx-get="/api/v1/post/Default"
 					class="loading loading-spinner loading-lg mx-auto"
 				></div>
 			</div>
