--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -58,11 +58,42 @@ templ ManyPost(postDatas []PostData, manyPostType ManyPostType) {
 	}
 	for _, postData := range postDatas {
 		<div class="w-full rounded-none card mb-2 p-4 text-base-content">
-			<div class="w-full h-80 carousel rounded-none bg-transparent">
+			<div
+				x-data="{
+					scrollLeft: () => {
+						$el.scrollLeft -= $el.offsetWidth;
+
+					},
+					scrollRight: () => {
+						$el.scrollLeft += $el.offsetWidth;
+					}
+				}"
+				class="lg:h-[35vw] h-[85vw] lg:w-[35vw] w-[85vw] mx-auto carousel carousel-center space-x-2 rounded-lg bg-transparent"
+			>
+				if len(postData.ImgSrc) > 1 {
+					<div class="opacity-100 flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-4">
+						<button
+							x-on:click="scrollLeft()"
+							id="prevButton"
+							class="p-0 rounded-l-lg rounded-none bg-transparent hover:bg-base-100/40 border-0 text-base-300 w-2/5 h-full"
+						>
+							<svg class="w-full h-full object-contain" width="256px" height="256px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="matrix(-1, 0, 0, 1, 0, 0)"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracurrentColorerCarrier" stroke-linecurrentcap="round" stroke-linejoin="round"></g><g id="SVGRepo_icurrentColoronCarrier"><path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="currentColor"></path> </g></svg>
+						</button>
+					</div>
+					<div class="opacity-100 flex flex-col justify-center items-end absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] right-4">
+						<button
+							x-on:click="scrollRight()"
+							id="nextButton"
+							class="p-0 rounded-r-lg rounded-none bg-transparent hover:bg-base-100/40 border-0 text-base-300 w-2/5 h-full"
+						>
+							<svg class="w-full h-full object-contain" width="256px" height="256px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracurrentColorerCarrier" stroke-linecurrentcap="round" stroke-linejoin="round"></g><g id="SVGRepo_icurrentColoronCarrier"><path d="M9.71069 18.2929C10.1012 18.6834 10.7344 18.6834 11.1249 18.2929L16.0123 13.4006C16.7927 12.6195 16.7924 11.3537 16.0117 10.5729L11.1213 5.68254C10.7308 5.29202 10.0976 5.29202 9.70708 5.68254C9.31655 6.07307 9.31655 6.70623 9.70708 7.09676L13.8927 11.2824C14.2833 11.6729 14.2833 12.3061 13.8927 12.6966L9.71069 16.8787C9.32016 17.2692 9.32016 17.9023 9.71069 18.2929Z" fill="currentColor"></path> </g></svg>
+						</button>
+					</div>
+				}
 				for _, imgSrc := range postData.ImgSrc {
 					<div class="carousel-item w-full">
 						<img
-							class="w-full object-contain"
+							class="w-full h-full object-cover"
 							src={ imgSrc }
 							alt="Meme"
 						/>
