--- a/internal/views/home/post.templ
+++ b/internal/views/home/post.templ
@@ -2,6 +2,7 @@ package home
 
 import (
 	"github.com/muhhae/lorem-ipsum/internal/views/util"
+	"strconv"
 )
 
 type ReactData struct {
@@ -65,17 +66,27 @@ templ ManyPost(postDatas []PostData, manyPostType ManyPostType) {
 }
 
 templ Post(postData PostData) {
-	<div class="w-full rounded-none card mb-2 p-4 text-base-content">
+	<div
+		x-data="{
+            slide: 0,
+        }"
+		class="w-full rounded-none card mb-2 p-4 text-base-content"
+	>
 		<div
 			x-data="{
-					scrollLeft: () => {
-						$el.scrollLeft -= $el.offsetWidth;
+				scrollLeft: () => {
+					$el.scrollLeft -= $el.offsetWidth;
 
-					},
-					scrollRight: () => {
-						$el.scrollLeft += $el.offsetWidth;
-					}
-				}"
+				},
+				scrollRight: () => {
+					$el.scrollLeft += $el.offsetWidth;
+				},
+                onScroll : () => {
+                    slide = Math.floor($el.scrollLeft / $el.offsetWidth);
+                }
+			}"
+			x-init="onScroll()"
+			x-on:scroll="onScroll()"
 			class="lg:h-[35vw] h-[85vw] lg:w-[35vw] w-[85vw] mx-auto carousel carousel-center space-x-2 rounded-lg bg-transparent"
 		>
 			if len(postData.ImgSrc) > 1 {
@@ -87,6 +98,7 @@ templ Post(postData PostData) {
 				</div>
 			}
 		</div>
+		@swapIndicator(len(postData.ImgSrc), postData.PostID)
 		<div class="card-body mt-4 p-2">
 			<h2 class="card-title text-base-content font-bold">{ postData.Username }</h2>
 			{ postData.Content }
@@ -99,6 +111,56 @@ templ Post(postData PostData) {
 	</div>
 }
 
+templ swapIndicator(size int, id string) {
+	if size > 1 {
+		<div
+			class="h-4 flex flex-row justify-center items-center  my-2 w-full"
+		>
+			for i := 0; i < size; i++ {
+				<span
+					x-show={ "slide !== " + strconv.Itoa(i) }
+				>
+					<svg
+						class="flex-0 w-4 h-full object-contain"
+						fill="currentColor"
+						height="200px"
+						width="200px"
+						id="Layer_1"
+						data-name="Layer 1"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 16 16"
+					>
+						<g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+						<g id="SVGRepo_iconCarrier">
+							<path class="cls-1" d="M8,2a6,6,0,1,0,6,6A6,6,0,0,0,8,2Zm0,9.42857A3.42857,3.42857,0,1,1,11.42857,8,3.42857,3.42857,0,0,1,8,11.42857Z"></path>
+						</g>
+					</svg>
+				</span>
+				<span
+					x-show={ "slide === " + strconv.Itoa(i) }
+				>
+					<svg
+						class="flex-0 w-4 h-full object-contain"
+						fill="currentColor"
+						height="256px"
+						width="256px"
+						id="Layer_1"
+						xmlns="http://www.w3.org/2000/svg"
+						viewBox="0 0 16 16"
+						stroke="currentColor"
+						stroke-width="1.6"
+					>
+						<g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" stroke-width="0.064"></g>
+						<g id="SVGRepo_iconCarrier">
+							<circle class="cls-1" cx="8" cy="8" r="4"></circle>
+						</g>
+					</svg>
+				</span>
+			}
+		</div>
+	}
+}
+
 templ swapButton() {
 	<div
 		class="opacity-100 flex flex-col justify-center items-start absolute top-4 lg:h-[35vw] h-[85vw] w-[17vw] lg:w-[7vw] left-6"
@@ -106,23 +168,23 @@ templ swapButton() {
 		<button
 			x-on:click="scrollLeft()"
 			id="prevButton"
-			class="btn btn-circle border-0 hover:bg-base-100/20 bg-transparent text-base-300  btn-lg"
+			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
 		>
 			<svg
 				class="w-4/5 h-4/5 object-contain"
-				viewBox="0 -9.55 119.78 119.78"
+				fill="currentColor"
+				version="1.1"
+				id="Capa_1"
 				xmlns="http://www.w3.org/2000/svg"
-				fill="#000000"
+				xmlns:xlink="http://www.w3.org/1999/xlink"
+				viewBox="0 0 462.846 462.845"
+				xml:space="preserve"
+				transform="matrix(-1, 0, 0, 1, 0, 0)"
 			>
 				<g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 				<g id="SVGRepo_iconCarrier">
-					<defs>
-						<style>.cls-1{fill:#ffffff;}</style>
-					</defs>
-					<g id="Layer_2" data-name="Layer 2">
-						<g id="Layer_1-2" data-name="Layer 1">
-							<path d="M60.3,78.46c-.31,5-.39,9-.82,12.91-.86,7.85-7.86,11.57-14.92,7.85A63.53,63.53,0,0,1,34.4,92.84Q19.67,81,5.29,68.78C-.35,64-1.3,58.65,1.58,51.82a30.86,30.86,0,0,1,2.19-4.65A302.23,302.23,0,0,1,31.91,9.31a48.7,48.7,0,0,1,7.64-6.84C46-2.3,51.84,0,53.52,7.92a65.45,65.45,0,0,1,.78,7.69c.14,1.66.24,3.33.4,5.53a32.54,32.54,0,0,0,4.39.14c7.11-.83,14.18-2.09,21.3-2.57a246.17,246.17,0,0,1,24.89-.54c7.68.26,11.38,3.91,12.77,11.46a112.58,112.58,0,0,1,1.63,24.8c-.05,1.42-.31,2.84-.49,4.25-1,8.35-5.08,13.81-14,14.64a17.63,17.63,0,0,0-4.09,1.24A65.73,65.73,0,0,1,78.3,78.24C72.6,78.16,66.9,78.37,60.3,78.46ZM43.47,14c-9,5.63-27.46,31.38-32.4,44.91,10.7,9.07,21.55,18.33,32.52,27.45,1.38,1.15,3.39,1.55,5.33,2.4,1.38-4.27.25-8,.35-11.62.13-4.81.95-6.57,5.41-7.27,5-.8,10.21-.76,15.33-1,7.4-.41,14.84-.49,22.2-1.28a39.24,39.24,0,0,0,16.08-5c2.55-12.13,1.56-25-2.65-33.79-4.31-1.14-8.87-1.08-13.42-.95-10.86.31-21.7.61-32.42,2.73-5.51,1.09-10.8.41-15.4-3.89C44.12,22.77,43.83,18.81,43.47,14Z"></path> <path class="cls-1" d="M43.47,14c.36,4.86.65,8.82.93,12.64,4.6,4.3,9.89,5,15.4,3.89,10.72-2.12,21.56-2.42,32.42-2.73,4.55-.13,9.11-.19,13.42.95,4.21,8.83,5.2,21.66,2.65,33.79a39.24,39.24,0,0,1-16.08,5c-7.36.79-14.8.87-22.2,1.28-5.12.29-10.29.25-15.33,1-4.46.7-5.28,2.46-5.41,7.27-.1,3.65,1,7.35-.35,11.62-1.94-.85-4-1.25-5.33-2.4-11-9.12-21.82-18.38-32.52-27.45C16,45.33,34.44,19.58,43.47,14Z"></path>
-						</g>
+					<g>
+						<g><path d="M173.113,4.671c-4.812-4.961-10.544-5.561-15.465-3.705c-2.829,0.366-5.683,1.488-8.331,3.705 c-21.018,17.61-41.223,36.122-60.667,55.467c-8.366,8.322-4.223,19.296,3.488,24.136c40.654,48.365,87.067,96.255,127.663,144.666 c-46.05,46.266-90.437,98.67-134.62,146.657c-4.956,5.383-5.152,11.73-2.775,16.92c0.378,4.936,3.364,9.455,7.663,12.781 c20.218,15.614,39.748,32.077,58.676,49.23c4.763,7.815,15.886,12.127,24.362,3.788c67.631-66.49,126.845-141.432,201.06-201.057 c2.036-1.636,3.407-3.428,4.261-5.281c4.245-5.586,5.316-13.649-0.798-20.251C308.419,156.975,244.086,77.817,173.113,4.671z M162.386,424.945c-14.83-13.086-30.039-25.689-45.562-37.942c42.155-47.078,85.617-97.578,130.822-141.879 c2.355-2.306,3.656-4.834,4.25-7.373c3.783-5.576,4.672-13.345-0.782-19.88c-41.015-49.129-87.973-97.629-129.219-146.558 c12.448-12.002,25.293-23.577,38.364-34.903c63.518,66.445,122.146,137.313,184.153,205.15 C277.899,296.685,223.053,363.73,162.386,424.945z"></path> </g>
 					</g>
 				</g>
 			</svg>
@@ -134,23 +196,23 @@ templ swapButton() {
 		<button
 			x-on:click="scrollRight()"
 			id="nextButton"
-			class="btn btn-circle border-0 hover:bg-base-100/20 bg-transparent text-base-300  btn-lg"
+			class="btn btn-circle border-0 hover:bg-neutral-100/30 bg-transparent text-neutral-950  btn-lg"
 		>
 			<svg
 				class="w-4/5 h-4/5 object-contain"
-				viewBox="0 -9.55 119.78 119.78"
+				fill="currentColor"
+				version="1.1"
+				id="Capa_1"
 				xmlns="http://www.w3.org/2000/svg"
-				fill="#000000"
-				transform="matrix(-1, 0, 0, 1, 0, 0)"
+				xmlns:xlink="http://www.w3.org/1999/xlink"
+				viewBox="0 0 462.846 462.845"
+				xml:space="preserve"
 			>
 				<g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 				<g id="SVGRepo_iconCarrier">
-					<defs>
-						<style>.cls-1{fill:#ffffff;}</style>
-					</defs>
-					<g id="Layer_2" data-name="Layer 2">
-						<g id="Layer_1-2" data-name="Layer 1">
-							<path d="M60.3,78.46c-.31,5-.39,9-.82,12.91-.86,7.85-7.86,11.57-14.92,7.85A63.53,63.53,0,0,1,34.4,92.84Q19.67,81,5.29,68.78C-.35,64-1.3,58.65,1.58,51.82a30.86,30.86,0,0,1,2.19-4.65A302.23,302.23,0,0,1,31.91,9.31a48.7,48.7,0,0,1,7.64-6.84C46-2.3,51.84,0,53.52,7.92a65.45,65.45,0,0,1,.78,7.69c.14,1.66.24,3.33.4,5.53a32.54,32.54,0,0,0,4.39.14c7.11-.83,14.18-2.09,21.3-2.57a246.17,246.17,0,0,1,24.89-.54c7.68.26,11.38,3.91,12.77,11.46a112.58,112.58,0,0,1,1.63,24.8c-.05,1.42-.31,2.84-.49,4.25-1,8.35-5.08,13.81-14,14.64a17.63,17.63,0,0,0-4.09,1.24A65.73,65.73,0,0,1,78.3,78.24C72.6,78.16,66.9,78.37,60.3,78.46ZM43.47,14c-9,5.63-27.46,31.38-32.4,44.91,10.7,9.07,21.55,18.33,32.52,27.45,1.38,1.15,3.39,1.55,5.33,2.4,1.38-4.27.25-8,.35-11.62.13-4.81.95-6.57,5.41-7.27,5-.8,10.21-.76,15.33-1,7.4-.41,14.84-.49,22.2-1.28a39.24,39.24,0,0,0,16.08-5c2.55-12.13,1.56-25-2.65-33.79-4.31-1.14-8.87-1.08-13.42-.95-10.86.31-21.7.61-32.42,2.73-5.51,1.09-10.8.41-15.4-3.89C44.12,22.77,43.83,18.81,43.47,14Z"></path> <path class="cls-1" d="M43.47,14c.36,4.86.65,8.82.93,12.64,4.6,4.3,9.89,5,15.4,3.89,10.72-2.12,21.56-2.42,32.42-2.73,4.55-.13,9.11-.19,13.42.95,4.21,8.83,5.2,21.66,2.65,33.79a39.24,39.24,0,0,1-16.08,5c-7.36.79-14.8.87-22.2,1.28-5.12.29-10.29.25-15.33,1-4.46.7-5.28,2.46-5.41,7.27-.1,3.65,1,7.35-.35,11.62-1.94-.85-4-1.25-5.33-2.4-11-9.12-21.82-18.38-32.52-27.45C16,45.33,34.44,19.58,43.47,14Z"></path>
+					<g>
+						<g>
+							<path d="M173.113,4.671c-4.812-4.961-10.544-5.561-15.465-3.705c-2.829,0.366-5.683,1.488-8.331,3.705 c-21.018,17.61-41.223,36.122-60.667,55.467c-8.366,8.322-4.223,19.296,3.488,24.136c40.654,48.365,87.067,96.255,127.663,144.666 c-46.05,46.266-90.437,98.67-134.62,146.657c-4.956,5.383-5.152,11.73-2.775,16.92c0.378,4.936,3.364,9.455,7.663,12.781 c20.218,15.614,39.748,32.077,58.676,49.23c4.763,7.815,15.886,12.127,24.362,3.788c67.631-66.49,126.845-141.432,201.06-201.057 c2.036-1.636,3.407-3.428,4.261-5.281c4.245-5.586,5.316-13.649-0.798-20.251C308.419,156.975,244.086,77.817,173.113,4.671z M162.386,424.945c-14.83-13.086-30.039-25.689-45.562-37.942c42.155-47.078,85.617-97.578,130.822-141.879 c2.355-2.306,3.656-4.834,4.25-7.373c3.783-5.576,4.672-13.345-0.782-19.88c-41.015-49.129-87.973-97.629-129.219-146.558 c12.448-12.002,25.293-23.577,38.364-34.903c63.518,66.445,122.146,137.313,184.153,205.15 C277.899,296.685,223.053,363.73,162.386,424.945z"></path>
 						</g>
 					</g>
 				</g>
